; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/isci/scil/extr_scic_sds_sgpio.c_scic_sgpio_update_led_state.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/isci/scil/extr_scic_sds_sgpio.c_scic_sgpio_update_led_state.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SGODSR_INVERT_BIT = common dso_local global i32 0, align 4
@SGODSR_ERROR_LED_SHIFT = common dso_local global i32 0, align 4
@SGODSR_LOCATE_LED_SHIFT = common dso_local global i32 0, align 4
@SGODSR_ACTIVITY_LED_SHIFT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @scic_sgpio_update_led_state(i64 %0, i32 %1, i32 %2, i32 %3, i32 %4) #0 {
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32*, align 8
  store i64 %0, i64* %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %13 = load i64, i64* %6, align 8
  %14 = inttoptr i64 %13 to i32*
  store i32* %14, i32** %12, align 8
  store i32 0, i32* %11, align 4
  %15 = load i32, i32* %8, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %23, label %17

17:                                               ; preds = %5
  %18 = load i32, i32* @SGODSR_INVERT_BIT, align 4
  %19 = load i32, i32* @SGODSR_ERROR_LED_SHIFT, align 4
  %20 = shl i32 %18, %19
  %21 = load i32, i32* %11, align 4
  %22 = or i32 %21, %20
  store i32 %22, i32* %11, align 4
  br label %23

23:                                               ; preds = %17, %5
  %24 = load i32, i32* %9, align 4
  %25 = icmp ne i32 %24, 0
  br i1 %25, label %32, label %26

26:                                               ; preds = %23
  %27 = load i32, i32* @SGODSR_INVERT_BIT, align 4
  %28 = load i32, i32* @SGODSR_LOCATE_LED_SHIFT, align 4
  %29 = shl i32 %27, %28
  %30 = load i32, i32* %11, align 4
  %31 = or i32 %30, %29
  store i32 %31, i32* %11, align 4
  br label %32

32:                                               ; preds = %26, %23
  %33 = load i32, i32* %10, align 4
  %34 = icmp ne i32 %33, 0
  br i1 %34, label %41, label %35

35:                                               ; preds = %32
  %36 = load i32, i32* @SGODSR_INVERT_BIT, align 4
  %37 = load i32, i32* @SGODSR_ACTIVITY_LED_SHIFT, align 4
  %38 = shl i32 %36, %37
  %39 = load i32, i32* %11, align 4
  %40 = or i32 %39, %38
  store i32 %40, i32* %11, align 4
  br label %41

41:                                               ; preds = %35, %32
  %42 = load i32*, i32** %12, align 8
  %43 = load i32, i32* %7, align 4
  %44 = load i32, i32* %11, align 4
  %45 = call i32 @scic_sgpio_write_SGODSR_register(i32* %42, i32 %43, i32 %44)
  ret void
}

declare dso_local i32 @scic_sgpio_write_SGODSR_register(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
